--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ io:
   input:
     file: file://${user.home}/data/in/*.dat
     delimiter: ç
+    chunk: 50
     salesmanLineId: "001" 
     customerLineId: "002"
     saleLineId: "003"
@@ -17,7 +18,7 @@ io:
       worstSeller: PIOR_VENDEDOR
       
 batch:
-  schedulerInMilliseconds: 600000
+  schedulerInMilliseconds: 300000
   
 spring:
   data:
@@ -27,3 +28,16 @@ spring:
       host: localhost
       #username: 
       #password:
+  batch:
+    job:
+      enabled: false
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:batchcontroldb
+    username: user
+    password: pass
+    initialization-mode: always
